[package]
name = "lia_equation_solver"
version = "0.1.0"
edition = "2018"
authors = ["neuring <neuring@pm.me>"]

[profile.release]
overflow-checks = true

[dependencies]
anyhow = "1.0.45"
itertools = "0.10.1"
rayon = "1.5.1"
rug = "1.14.0"
structopt = "0.3.25"
thiserror = "1.0.30"

[dependencies.num]
version = "0.4"
default-features=false
